// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Notification> Snapshots Error variant 1`] = `
<div
  className="ys-notification ys-notification--error"
>
  <span
    aria-hidden="true"
    className="ys-notification__icon"
  >
    <Icon />
  </span>
  <div
    className="ys-notification__content"
  >
    <NotificationText
      className=""
    >
      Notification message
    </NotificationText>
  </div>
</div>
`;

exports[`<Notification> Snapshots Info variant 1`] = `
<div
  className="ys-notification ys-notification--info"
>
  <span
    aria-hidden="true"
    className="ys-notification__icon"
  >
    <Icon />
  </span>
  <div
    className="ys-notification__content"
  >
    <NotificationText
      className=""
    >
      Notification message
    </NotificationText>
  </div>
</div>
`;

exports[`<Notification> Snapshots Success variant 1`] = `
<div
  className="ys-notification ys-notification--success"
>
  <span
    aria-hidden="true"
    className="ys-notification__icon"
  >
    <Icon />
  </span>
  <div
    className="ys-notification__content"
  >
    <NotificationText
      className=""
    >
      Notification message
    </NotificationText>
  </div>
</div>
`;

exports[`<Notification> Snapshots Warning variant 1`] = `
<div
  className="ys-notification ys-notification--warning"
>
  <span
    aria-hidden="true"
    className="ys-notification__icon"
  >
    <Icon />
  </span>
  <div
    className="ys-notification__content"
  >
    <NotificationText
      className=""
    >
      Notification message
    </NotificationText>
  </div>
</div>
`;

exports[`<Notification> Snapshots With custom className 1`] = `
<div
  className="ys-notification ys-notification--info sparrow"
>
  <span
    aria-hidden="true"
    className="ys-notification__icon"
  >
    <Icon />
  </span>
  <div
    className="ys-notification__content"
  >
    <NotificationText
      className=""
    >
      Notification message
    </NotificationText>
  </div>
</div>
`;

exports[`<Notification> Snapshots With default props 1`] = `
<div
  className="ys-notification ys-notification--info"
>
  <span
    aria-hidden="true"
    className="ys-notification__icon"
  >
    <Icon />
  </span>
  <div
    className="ys-notification__content"
  >
    <NotificationText
      className=""
    >
      Notification message
    </NotificationText>
  </div>
</div>
`;
